--- a/style.css
+++ b/style.css
@@ -142,3 +142,117 @@ a{
 }
 
 
+
+
+
+
+
+
+
+
+.wrapper{
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+  
+  .wrapper .title{
+    font-weight: 700;
+    font-size: 24px;
+    color: #fff;
+  }
+  
+  .select_wrap{
+    width: 100%;
+    margin: 15px auto;
+    position: relative;
+    user-select: none;
+  }
+  
+  .select_wrap .default_option{
+    background: #fff;
+    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
+  }
+  
+  .select_wrap .default_option li{
+      padding: 5px 10px;
+      border: 1px solid #ced4da !important;
+      border-radius: 3px !important;
+      font-size: 11px !important;
+  }
+  
+  .select_wrap .default_option:before{
+      content: "";
+      background-image: url('./image/Arrow 1.png');
+      position: absolute;
+      top: 13px !important;
+      right: 18px;
+      width: 10px;
+      height: 6px;
+  }
+  
+  .select_wrap .select_ul{
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    background: #fff;
+    border-radius: 0px;
+    border: 1px solid #ced4da !important;
+    border-top: 0px !important;
+    display: none;
+  }
+  
+  .select_wrap .select_ul li{
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 11px !important;
+  }
+  
+  .select_wrap .select_ul li:first-child:hover{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  
+  .select_wrap .select_ul li:last-child:hover{
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+  
+  
+  
+  .select_wrap .select_ul {
+      padding-inline-start: 0px !important;
+  }
+  
+  .select_wrap .option{
+    display: flex;
+    align-items: center;
+  }
+  
+  .select_wrap .option .icon {
+    background: url('./image/security.png') no-repeat;
+    min-width: 18px;
+    min-height: 18px;
+    margin-right: 15px;
+  }
+  
+  .select_wrap .option .icon1 {
+    background: url('./image/bin.png') no-repeat;
+    min-width: 18px;
+    min-height: 18px;
+    margin-right: 15px;
+  }
+  
+  .select_wrap.active .select_ul{
+    display: block;
+  }
+  
+
+
+ul li{
+    list-style: none;
+}
